# slopescreening

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.py
experiments/: .gitignore
experiments/SIAM/: increasingball.py  setup.py  setups.json  slopepb.py
experiments/SIAM/xp_0_balls/: make_fig_paper.sh  poc.py  poc_debug.py  process_data.py  viz.py  viz_final.py  xp_a_accuracy_sol.py  xp_b_screening.py  xp_c_viz_paper.py  xp_verif_screening.py  xp_viz_gen_sreening.py
experiments/SIAM/xp_1_balls/: launcher.sh  process_data.py  xp_a_accuracy_sol.py  xp_b_screening.py  xp_c_viz.py  xp_c_viz_SIAM_fig1.py  xp_c_viz_SIMA_fig2.py  xp_c_viz_fig1.py  xp_c_viz_fig2.py  xpparams.py
experiments/SIAM/xp_2_bench_time/: get_algs_params.py  launcher.sh  make_figs.sh  process_data.py  viz_paper_it.py  xp_a_get_state.py  xp_b_get_budget.py  (+6 more)
experiments/utils/: increasingball.py  slopepb.py
slopescreening/: __init__.py
slopescreening/screening/: ascreening.py  gap_test_all.c  gap_test_all.pyx  gap_test_p_1.c  gap_test_p_1.pyx  gap_test_p_q.py  utils.c  utils.pyx
slopescreening/solver/: parameters.py  slope.py
src/: __init__.py  __version.py  dictionaries.py  utils.py
src/screening/: ascreening.py  gap_ptest.c  gap_ptest.pyx  gap_rqtest.c  gap_rqtest.pyx  gap_test_all.c  gap_test_all.pyx  gap_test_p_1.c  gap_test_p_1.pyx  gap_test_p_q.py  kappa_test.c  kappa_test.pyx  singletest.py  utils.c  utils.pyx
src/solver/: parameters.py  prox.py  slope.py
tests/: test_generalized_screening.py  test_solver.py  test_utils.py
(+1 files in other folders)
