[build-system]
requires = [
    "setuptools",
    "numpy>=1.21.2",
    "scipy>=1.7.1",
    "Cython>=0.29.24",
]
build-backend = "setuptools.build_meta"


[project]
name = "slopescreening"
dependencies =[
    "pyparsing>=2.4.7",
    "python-dateutil>=2.8.2",
    "scikit-learn>=0.24.2",
    "matplotlib>=3.4.3",
]
description = 'Safe screening rules for the SLOPE problem'
authors = [
    {name = "Clément Elvira", email = "clement.elvira@centralesupelec.fr"},
    {name = "Cédric Herzet"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]


[tool.setuptools.dynamic]
version = {attr = "slopescreening.__version__"}
